# lct-bench

./: Justfile  README.org  flake.nix  nvfetcher.toml
_sources/: generated.json  generated.nix
cpp/: README.org
cpp/alg/monoid/: add.hpp
cpp/graph/ds/: lct_node_commutative_monoid.hpp  link_cut_tree.hpp
cpp/test/: dynamic_tree_vertex_add_path_sum.test.cpp
hs/: .gitignore  cabal.project  hs.cabal
hs/.verify-helper/: config.toml
hs/app/: lct-test.hs
hs/src/: Lct.hs  Util.hs
